# example.python-hello-world

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
src/: main.py
src/greet/: hello.py
src/log/: logger.py
src/sample_lib/: hello.py
tests/greet/: test_hello.py
